--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 
+/* define color pallete */
 :root {
-  --primary-color: #050505;
-  --foreground-color: #fffff0;
-  --hero-color-1: #09907e;
-  --hero-color-2: #fcf233;
+  /* colors */
+  --color-1: #0d0e0d;
+  --color-2: #27a38f;
+  --color-3: #d48d28;
+  --color-4: #faf9ee;
+  --color-5: #72716d;
+  --color-6: #f1f1f2;
+
+  /* spacing */
+  --padding-x: 32px;
 }
+
+/* reset */
 
 *,
 *::after,
@@ -15,151 +24,194 @@
   box-sizing: border-box;
 }
 
+/* general styling */
 body {
-  font-family: Poppins, Roboto, Arial, sans-serif;
-  position: relative;
+  font-family: poppins Arial, Helvetica, sans-serif;
+  width: 100%;
+  min-height: 100vh;
+  background-color: var(--color-1);
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 section {
-  min-height: 100vh;
+  padding: 16px var(--padding-x);
+  height: 100vh;
   width: 100%;
-  background-color: var(--primary-color);
-}
-
-nav {
-  display: flex;
-  position: sticky;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding: 16px 64px;
-  background-color: var(--primary-color);
-  border-bottom: solid 1px var(--foreground-color);
-  box-shadow: 0 1px 1px var(--foreground-color);
-}
-
-nav .logo {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: var(--foreground-color);
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  gap: 1rem;
-}
-
-nav ul li {
-  margin: 0;
-}
-
-nav ul li a,
-nav ul li button {
-  color: var(--foreground-color);
-  text-decoration: none;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-
-.hero {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px 64px;
-  width: 100%;
-  height: 100%;
-  color: var(--foreground-color);
-}
-
-.hero .punch-line {
-  max-width: 50%;
-}
-
-.hero h1 {
-  font-size: 3rem;
-  margin: 0;
-}
-
-.hero p {
-  font-size: 1.2rem;
-  margin: 0.5rem 0;
-}
-
-.hero button {
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  cursor: pointer;
-}
-
-.hero .cool-image img {
-  max-width: 100%;
-  height: auto;
 }
 
 .mini-section {
-  padding: 2rem;
-  background-color: var(--primary-color);
+  height: 50%;
 }
 
 .mini-section-header {
-  font-size: 2rem;
-  margin-bottom: 1rem;
+  padding: 16px;
+  font-size: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: var(--color-5);
+  &:hover {
+    color: var(--color-4);
+  }
 }
 
-.mini-section-content {
+/* nav */
+nav {
   display: flex;
-  gap: 1rem;
+  position: sticky;
+  top: 0;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px var(--padding-x);
+  border-bottom: 1px solid var(--color-6);
+  height: 80px;
+
+  /* logo */
+  .logo {
+    font-size: 24px;
+    font-weight: 700;
+    color: var(--color-4);
+    transition: color 0.3s ease;
+    &:hover {
+      color: var(--color-2);
+    }
+  }
+
+  /* nav links */
+  ul {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    li {
+      /* links */
+      a {
+        color: var(--color-4);
+        font-size: 16px;
+        font-weight: 500;
+        transition: color 0.3s ease;
+        &:hover,
+        &:active {
+          color: var(--color-2);
+        }
+      }
+
+      /* contact button */
+      button {
+        padding: 8px 16px;
+        background-color: var(--color-2);
+        color: var(--color-4);
+        font-size: 16px;
+        font-weight: bold;
+        border-radius: 4px;
+        transition: background-color 0.3s ease;
+        &:hover,
+        &:active {
+          background-color: var(--color-3);
+        }
+      }
+    }
+  }
 }
 
-.card {
-  background-color: var(--primary-color);
-  padding: 1rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+/* hero */
+.hero {
+  display: flex;
+  padding: 0px var(--padding-x);
+  height: 90vh;
+  align-items: center;
+  justify-content: space-between;
+  .punch-line {
+    display: flex;
+    gap: 16px;
+    flex-direction: column;
+    h1 {
+      font-size: 64px;
+      font-weight: bold;
+      color: var(--color-4);
+    }
+    p:nth-of-type(1) {
+      font-size: 32px;
+      font-weight: bold;
+      color: var(--color-2);
+    }
+    p:nth-of-type(2) {
+      font-size: 24px;
+      font-weight: 500;
+      color: var(--color-5);
+    }
+    button {
+      padding: 8px 16px;
+      background-color: var(--color-2);
+      color: var(--color-4);
+      font-size: 16px;
+      font-weight: bold;
+      border-radius: 4px;
+      transition: background-color 0.3s ease;
+      &:hover,
+      &:active {
+        background-color: var(--color-3);
+      }
+    }
+  }
+}
+
+/* about */
+.character.card {
+  width: 300px;
+  height: 200px;
+  background: var(--color-5);
+  border-radius: 15px;
+  padding: 20px;
+  border: 1px solid var(--color-6);
+}
+
+.character-image {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .character-image img {
-  max-width: 100%;
+  width: 75px;
+  height: 75px;
   border-radius: 50%;
+  border: 1px solid var(--color-4);
+  object-fit: cover;
 }
 
+/* Character Details */
 .character-details {
+  text-align: left;
+  padding: 10px;
+}
+
+.character-detail {
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  justify-content: space-between;
 }
 
 .character-detail h2 {
-  margin: 0;
-}
-
-footer {
-  background-color: var(--primary-color);
-  color: var(--foreground-color);
-  padding: 1rem 0;
-  text-align: center;
-}
-
-footer .logo {
-  font-size: 1.5rem;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: var(--color-4);
   font-weight: bold;
 }
 
-footer ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-  padding: 0;
-}
-
-footer ul li {
-  margin: 0;
-}
-
-footer ul li a {
-  color: var(--foreground-color);
-  text-decoration: none;
+.character-detail p {
+  font-size: 12px;
+  font-weight: 600;
+  color: var(--color-4);
 }
