--- a/style/style.css
+++ b/style/style.css
@@ -28,7 +28,6 @@
 body {
   font-family: poppins Arial, Helvetica, sans-serif;
   width: 100%;
-  min-height: 100vh;
   background-color: var(--color-1);
 }
 
@@ -47,12 +46,18 @@ button {
 }
 
 section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding: 16px var(--padding-x);
-  height: 100vh;
+  height: 150vh;
   width: 100%;
 }
 
 .mini-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 50%;
 }
 
@@ -66,6 +71,13 @@ section {
   &:hover {
     color: var(--color-4);
   }
+}
+
+.mini-section-content {
+  display: flex;
+  height: 100%;
+  gap: 16px;
+  align-items: center;
 }
 
 /* nav */
@@ -168,7 +180,32 @@ nav {
   }
 }
 
+/* card preset */
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 32px;
+  width: 250px;
+  height: 300px;
+  background: rgba(255, 255, 255, 0.1);
+  color: var(--color-4);
+  border-radius: 12px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+}
+
 /* about */
+#about .mini-section-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .character.card {
   width: 300px;
   height: 200px;
@@ -176,6 +213,7 @@ nav {
   border-radius: 15px;
   padding: 20px;
   border: 1px solid var(--color-6);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
 }
 
 .character-image {
@@ -207,6 +245,7 @@ nav {
   font-size: 14px;
   text-transform: uppercase;
   color: var(--color-4);
+  opacity: 0.8;
   font-weight: bold;
 }
 
@@ -214,4 +253,51 @@ nav {
   font-size: 12px;
   font-weight: 600;
   color: var(--color-4);
+  opacity: 0.8;
+}
+
+.quote {
+  font-size: 32px;
+  text-overflow: ellipsis;
+  font-weight: 600;
+  color: var(--color-4);
+}
+/* skills */
+#skills .mini-section-content {
+  display: flex;
+  gap: 16px;
+  overflow-y: scroll;
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.skill.card i {
+  font-size: 72px;
+  color: var(--color-2);
+  transition: color 0.3s ease;
+}
+
+.skill.card p {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  color: var(--color-5);
+  &:nth-of-type(1) {
+    color: var(--color-4);
+    font-size: 24px;
+  }
+}
+
+.skill.card:hover {
+  transform: translateY(-10px);
+}
+
+.skill.card:hover i {
+  color: var(--color-3);
 }
