--- a/style/style.css
+++ b/style/style.css
@@ -208,16 +208,14 @@ nav {
 
 .character.card {
   width: 300px;
-  height: 200px;
-  background: var(--color-5);
+  height: 210px;
   border-radius: 15px;
   padding: 20px;
   border: 1px solid var(--color-6);
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
 }
-
 .character-image {
   width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
 }
@@ -226,13 +224,14 @@ nav {
   width: 75px;
   height: 75px;
   border-radius: 50%;
-  border: 1px solid var(--color-4);
+  border: 1px solid var(--color-2);
   object-fit: cover;
 }
 
 /* Character Details */
 .character-details {
   text-align: left;
+  width: 100%;
   padding: 10px;
 }
 
@@ -243,8 +242,8 @@ nav {
 
 .character-detail h2 {
   font-size: 14px;
-  text-transform: uppercase;
-  color: var(--color-4);
+  text-transform: capitalize;
+  color: var(--color-2);
   opacity: 0.8;
   font-weight: bold;
 }
