--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,7 @@
 
 /* general styling */
 body {
-  font-family: poppins Arial, Helvetica, sans-serif;
+  font-family: poppins, Arial, Helvetica, sans-serif;
   width: 100%;
   background-color: var(--color-1);
 }
@@ -68,9 +68,6 @@ section {
   text-transform: uppercase;
   letter-spacing: 2px;
   color: var(--color-5);
-  &:hover {
-    color: var(--color-4);
-  }
 }
 
 .mini-section-content {
@@ -90,54 +87,76 @@ nav {
   padding: 16px var(--padding-x);
   border-bottom: 1px solid var(--color-6);
   height: 80px;
-
-  /* logo */
-  .logo {
-    font-size: 24px;
-    font-weight: 700;
-    color: var(--color-4);
-    transition: color 0.3s ease;
-    &:hover {
-      color: var(--color-2);
-    }
-  }
-
-  /* nav links */
-  ul {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-    li {
-      /* links */
-      a {
-        color: var(--color-4);
-        font-size: 16px;
-        font-weight: 500;
-        transition: color 0.3s ease;
-        &:hover,
-        &:active {
-          color: var(--color-2);
-        }
-      }
-
-      /* contact button */
-      button {
-        padding: 8px 16px;
-        background-color: var(--color-2);
-        color: var(--color-4);
-        font-size: 16px;
-        font-weight: bold;
-        border-radius: 4px;
-        transition: background-color 0.3s ease;
-        &:hover,
-        &:active {
-          background-color: var(--color-3);
-        }
-      }
-    }
-  }
 }
 
+nav .logo {
+  font-size: 24px;
+  font-weight: 700;
+  color: var(--color-4);
+  transition: color 0.3s ease;
+}
+
+nav .logo:hover {
+  color: var(--color-2);
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+nav ul li a {
+  color: var(--color-4);
+  font-size: 16px;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
+
+nav ul li a:hover,
+nav ul li a:active {
+  color: var(--color-2);
+}
+
+nav ul li button {
+  padding: 8px 16px;
+  background-color: var(--color-2);
+  color: var(--color-4);
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+nav ul li button:hover,
+nav ul li button:active {
+  background-color: var(--color-3);
+}
+.hamburger-menu {
+  display: none;
+  cursor: pointer;
+}
+
+.hamburger-menu i {
+  font-size: 24px;
+  color: var(--color-4);
+}
+
+@media (max-width: 768px) {
+  .hamburger-menu {
+    display: block;
+  }
+
+  nav ul {
+    display: none;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  nav ul.active {
+    display: flex;
+  }
+}
 /* hero */
 .hero {
   display: flex;
@@ -145,39 +164,45 @@ nav {
   height: 90vh;
   align-items: center;
   justify-content: space-between;
-  .punch-line {
-    display: flex;
-    gap: 16px;
-    flex-direction: column;
-    h1 {
-      font-size: 64px;
-      font-weight: bold;
-      color: var(--color-4);
-    }
-    p:nth-of-type(1) {
-      font-size: 32px;
-      font-weight: bold;
-      color: var(--color-2);
-    }
-    p:nth-of-type(2) {
-      font-size: 24px;
-      font-weight: 500;
-      color: var(--color-5);
-    }
-    button {
-      padding: 8px 16px;
-      background-color: var(--color-2);
-      color: var(--color-4);
-      font-size: 16px;
-      font-weight: bold;
-      border-radius: 4px;
-      transition: background-color 0.3s ease;
-      &:hover,
-      &:active {
-        background-color: var(--color-3);
-      }
-    }
-  }
+}
+
+.hero .punch-line {
+  display: flex;
+  gap: 16px;
+  flex-direction: column;
+}
+
+.hero .punch-line h1 {
+  font-size: 64px;
+  font-weight: bold;
+  color: var(--color-4);
+}
+
+.hero .punch-line p:nth-of-type(1) {
+  font-size: 32px;
+  font-weight: bold;
+  color: var(--color-2);
+}
+
+.hero .punch-line p:nth-of-type(2) {
+  font-size: 24px;
+  font-weight: 500;
+  color: var(--color-5);
+}
+
+.hero .punch-line button {
+  padding: 8px 16px;
+  background-color: var(--color-2);
+  color: var(--color-4);
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+
+.hero .punch-line button:hover,
+.hero .punch-line button:active {
+  background-color: var(--color-3);
 }
 
 /* card preset */
@@ -213,6 +238,7 @@ nav {
   padding: 20px;
   border: 1px solid var(--color-6);
 }
+
 .character-image {
   width: 100%;
   height: 100%;
@@ -260,6 +286,7 @@ nav {
   font-weight: 600;
   color: var(--color-4);
 }
+
 /* skills */
 #skills .mini-section-content {
   display: flex;
@@ -286,10 +313,11 @@ nav {
   font-weight: bold;
   text-align: center;
   color: var(--color-5);
-  &:nth-of-type(1) {
-    color: var(--color-4);
-    font-size: 24px;
-  }
+}
+
+.skill.card p:nth-of-type(1) {
+  color: var(--color-4);
+  font-size: 24px;
 }
 
 .skill.card:hover {
@@ -304,6 +332,7 @@ nav {
 #designs .mini-section-content {
   overflow-y: scroll;
 }
+
 .design.card {
   overflow: hidden;
   padding: 0px;
@@ -315,9 +344,28 @@ nav {
   height: 100%;
   width: 100%;
 }
+/* open source projects */
+#projects .mini-section-content {
+  display: flex;
+  gap: 16px;
+  overflow-y: scroll;
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  ::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.github-card img {
+  object-fit: scale-down;
+  height: 100%;
+  width: 100%;
+}
 
 /* footer */
-
 footer {
   display: flex;
   justify-content: space-between;
@@ -352,4 +400,146 @@ footer ul li a {
 
 footer ul li a:hover {
   color: var(--color-2);
+}
+
+/* Media Queries for responsiveness */
+@media (max-width: 768px) {
+  .cool-image {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  :root {
+    --padding-x: 16px;
+  }
+
+  .hero {
+    flex-direction: column;
+    height: auto;
+    padding: 16px var(--padding-x);
+  }
+
+  .hero .punch-line h1 {
+    font-size: 48px;
+  }
+
+  .hero .punch-line p:nth-of-type(1) {
+    font-size: 24px;
+  }
+
+  .hero .punch-line p:nth-of-type(2) {
+    font-size: 18px;
+  }
+
+  .card {
+    width: 100%;
+    height: auto;
+    padding: 16px;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  nav ul li a {
+    font-size: 14px;
+  }
+
+  nav ul li button {
+    font-size: 14px;
+  }
+
+  .mini-section-content {
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .mini-section-header {
+    font-size: 20px;
+  }
+
+  .character.card {
+    width: 100%;
+    height: auto;
+  }
+
+  .character-image img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .character-detail h2 {
+    font-size: 12px;
+  }
+
+  .character-detail p {
+    font-size: 10px;
+  }
+
+  .quote {
+    font-size: 24px;
+  }
+
+  .skill.card i {
+    font-size: 48px;
+  }
+
+  .skill.card p:nth-of-type(1) {
+    font-size: 20px;
+  }
+
+  .skill.card p {
+    font-size: 14px;
+  }
+
+  footer .logo {
+    font-size: 20px;
+  }
+
+  footer ul li a {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .hero .punch-line h1 {
+    font-size: 36px;
+  }
+
+  .hero .punch-line p:nth-of-type(1) {
+    font-size: 18px;
+  }
+
+  .hero .punch-line p:nth-of-type(2) {
+    font-size: 14px;
+  }
+
+  .mini-section-header {
+    font-size: 18px;
+  }
+
+  .quote {
+    font-size: 20px;
+  }
+
+  .skill.card i {
+    font-size: 36px;
+  }
+
+  .skill.card p:nth-of-type(1) {
+    font-size: 18px;
+  }
+
+  .skill.card p {
+    font-size: 12px;
+  }
+
+  footer .logo {
+    font-size: 18px;
+  }
+
+  footer ul li a {
+    font-size: 18px;
+  }
 }
