--- a/style/style.css
+++ b/style/style.css
@@ -55,6 +55,7 @@ section {
 
 .mini-section {
   display: flex;
+  padding: var(--padding-x) 0px;
   flex-direction: column;
   justify-content: center;
   height: 50%;
@@ -71,10 +72,19 @@ section {
 .mini-section-content {
   display: flex;
   height: 100%;
+  width: 100%;
   gap: 16px;
   align-items: center;
 }
 
+@media (max-width: 768px) {
+  section {
+    height: fit-content;
+  }
+  .mini-section-content {
+    flex-direction: column;
+  }
+}
 /* nav */
 nav {
   display: flex;
@@ -145,144 +155,8 @@ nav ul li button:active {
   .hamburger-menu {
     display: block;
   }
-
   nav ul {
     display: none;
-    flex-direction: column;
-    gap: 8px;
-  }
-
-  nav ul.active {
-    display: flex;
-  }
-
-  :root {
-    --padding-x: 16px;
-  }
-
-  .hero {
-    flex-direction: column;
-    height: auto;
-    padding: 16px var(--padding-x);
-  }
-
-  .hero .punch-line h1 {
-    font-size: 48px;
-  }
-
-  .hero .punch-line p:nth-of-type(1) {
-    font-size: 24px;
-  }
-
-  .hero .punch-line p:nth-of-type(2) {
-    font-size: 18px;
-  }
-
-  .card {
-    width: 100%;
-    height: auto;
-    padding: 16px;
-  }
-
-  nav ul li a {
-    font-size: 14px;
-  }
-
-  nav ul li button {
-    font-size: 14px;
-  }
-
-  .mini-section-content {
-    flex-direction: column;
-    gap: 8px;
-  }
-
-  .mini-section-header {
-    font-size: 20px;
-  }
-
-  .character.card {
-    width: 100%;
-    height: auto;
-  }
-
-  .character-image img {
-    width: 50px;
-    height: 50px;
-  }
-
-  .character-detail h2 {
-    font-size: 12px;
-  }
-
-  .character-detail p {
-    font-size: 10px;
-  }
-
-  .quote {
-    font-size: 24px;
-  }
-
-  .skill.card i {
-    font-size: 48px;
-  }
-
-  .skill.card p:nth-of-type(1) {
-    font-size: 20px;
-  }
-
-  .skill.card p {
-    font-size: 14px;
-  }
-
-  footer .logo {
-    font-size: 20px;
-  }
-
-  footer ul li a {
-    font-size: 20px;
-  }
-}
-
-@media (max-width: 480px) {
-  .hero .punch-line h1 {
-    font-size: 36px;
-  }
-
-  .hero .punch-line p:nth-of-type(1) {
-    font-size: 18px;
-  }
-
-  .hero .punch-line p:nth-of-type(2) {
-    font-size: 14px;
-  }
-
-  .mini-section-header {
-    font-size: 18px;
-  }
-
-  .quote {
-    font-size: 20px;
-  }
-
-  .skill.card i {
-    font-size: 36px;
-  }
-
-  .skill.card p:nth-of-type(1) {
-    font-size: 18px;
-  }
-
-  .skill.card p {
-    font-size: 12px;
-  }
-
-  footer .logo {
-    font-size: 18px;
-  }
-
-  footer ul li a {
-    font-size: 18px;
   }
 }
 
@@ -334,6 +208,12 @@ nav ul li button:active {
   background-color: var(--color-3);
 }
 
+@media (max-width: 768px) {
+  .cool-image {
+    display: none;
+  }
+}
+
 /* card preset */
 .card {
   display: flex;
@@ -351,6 +231,8 @@ nav ul li button:active {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
+  text-transform: capitalize;
+  flex-shrink: 0;
 }
 
 /* about */
@@ -532,13 +414,6 @@ footer ul li a:hover {
   color: var(--color-2);
 }
 
-/* Media Queries for responsiveness */
-@media (max-width: 768px) {
-  .cool-image {
-    display: none;
-  }
-}
-
 /* The Modal (background) */
 #image-viewer {
   display: none;
@@ -572,7 +447,7 @@ footer ul li a:hover {
   }
 }
 
-#image-viewer i {
+#image-viewer i.i {
   position: fixed;
   color: var(--color-5);
   font-size: 40px;
@@ -582,8 +457,8 @@ footer ul li a:hover {
   padding: var(--padding-x);
 }
 
-#image-viewer i:hover,
-#image-viewer i:focus {
+#image-viewer i.i:hover,
+#image-viewer i.i:focus {
   color: var(--color-3);
   text-decoration: none;
   cursor: pointer;
@@ -606,6 +481,42 @@ footer ul li a:hover {
 #image-viewer #next-image {
   right: 0px;
 }
+
+#image-viewer a {
+  display: flex;
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  padding: 12px 24px;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-1);
+  color: var(--color-4);
+  font-size: 14px;
+  text-transform: capitalize;
+  gap: 8px;
+  font-weight: bold;
+  border-radius: 8px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+#image-viewer a .text {
+  display: none;
+}
+
+#image-viewer a div i {
+  font-size: 24px;
+}
+
+#image-viewer a:hover {
+  background-color: var(--color-4);
+  color: var(--color-1);
+}
+
+#image-viewer a:hover .text {
+  display: block;
+}
+
 @media only screen and (max-width: 700px) {
   .modal-content {
     width: 100%;
