--- a/style/style.css
+++ b/style/style.css
@@ -342,10 +342,15 @@ nav ul li a.contact:active {
 }
 
 .quote {
-  font-size: 32px;
+  font-size: 16px;
   text-overflow: ellipsis;
-  font-weight: 600;
   color: var(--color-4);
+}
+
+@media (max-width: 480px) {
+  .character.card {
+    width: 100%;
+  }
 }
 
 /* skills */
