feat: add media query for small screens to enable vertical scrolling in navigation

--- a/style/style.css
+++ b/style/style.css
@@ -197,7 +197,12 @@ nav ul li a.contact:active {
     display: none;
   }
 }
-
+@media (max-width: 468px) {
+  .nav-small ul {
+    overflow-y: scroll;
+    justify-content: start;
+  }
+}
 /* hero */
 .hero {
   display: flex;
